# qdrant-batch-proxy

./: Cargo.toml  Dockerfile  README.md  absolutes_bulk.csv  docker-compose.yml  finals_bulk.csv  finals_single.csv  generate_bulk_requests.sh  generate_single_requests.sh  latency.R  make_daemon_request.sh  partials_bulk.csv  partials_single.csv  plot_elapsed.R
src/: main.rs
